src/main/java/com/example/bankapplication/controllers/errors/NoCurrencySellectedException.java
package com.example.bankapplication.controllers.errors;

public class NoCurrencySellectedException extends Exception{
}
